--- a/student_partner.html
+++ b/student_partner.html
@@ -348,7 +348,7 @@
           </div>
 
           <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
-            <form action="https://docs.google.com/forms/u/4/d/e/1FAIpQLSfoJEHa0z2xuN7VofwIlAEkmgcNaCQvef2kyhTfHCNKyX-WpA/formResponse" method="post" role="form" class="php-email-form">
+            <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdBUly_GS7BngnmKI14DlZCz0AwCDipVDyJo6fz5LwhNipZyQ/formResponse" method="post" role="form" class="php-email-form">
               <div class="form-group">
                 <input type="text" name="entry.89063116" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                 <div class="validate"></div>
@@ -371,6 +371,8 @@
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
+                <div class="loading">Loading</div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
                 <p id="demo"></p>
               </div>
               <div class="text-center" ><button type="submit" onclick="myFunction()">Send Message</button></div>
